--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,11 @@ body {
 
 // header
 
+.header {
+  background: var(--white, #fff);
+  box-shadow: 0px 1.667px 8.333px 0px rgba(0, 0, 0, 0.15);
+}
+
 .header__inner {
   display: flex;
   align-items: center;
@@ -24,20 +29,44 @@ body {
 
     .nav-list {
       display: flex;
+      margin-top: 30px;
 
       .nav-item {
         margin-right: 50px;
+        position: relative;
 
         &.active .nav-link {
           color: $primaryColor;
+        }
+
+        &.active::before {
+          position: absolute;
+          display: inline-block;
+          width: 100%;
+          height: 1px;
+          content: "";
+          background: $primaryColor;
+          bottom: -3.47rem;
+        }
+
+        .nav-link {
+          color: var(--content, #2c2c2c);
+          font-size: 1.6667rem;
+          font-weight: 600;
+          line-height: 1.3; /* 130% */
         }
       }
     }
   }
 
   .header-action {
+    margin-top: 30px;
     .header-icon:first-child {
       margin-right: 50px;
+    }
+
+    .header-icon {
+      cursor: pointer;
     }
   }
 }
@@ -57,7 +86,9 @@ body {
 
 // product
 .product__inner {
+  width: 975px;
   padding-top: 10rem;
+  margin: 0 auto;
 
   .product__top-title {
     color: var(--content, #2c2c2c);
@@ -70,12 +101,16 @@ body {
   .product-list {
     display: grid;
     grid-template-columns: auto auto auto;
-    gap: 11.59rem 12.97rem;
+    gap: 11.59rem 8.33rem;
     margin-top: 5rem;
 
     .product-item {
       text-align: center;
       position: relative;
+
+      &:nth-child(3) .product-item__title:first-line {
+        word-spacing: 0;
+      }
 
       &::before {
         position: absolute;
@@ -107,9 +142,22 @@ body {
         font-size: 2.3333rem;
         font-weight: 700;
         margin-top: 1.72rem;
+        position: relative;
 
         &::first-line {
           word-spacing: 999px;
+        }
+
+        &::before {
+          position: absolute;
+          display: inline-block;
+          content: "";
+          width: 4.0833rem;
+          height: 1px;
+          background: var(--grey-500-main, #a3a3a3);
+          bottom: -1.29rem;
+          left: 50%;
+          translate: -50%;
         }
       }
 
@@ -146,6 +194,134 @@ body {
         font-size: 1.6667rem;
         font-weight: 700;
         border: none;
+      }
+    }
+  }
+}
+
+// about
+.about__inner {
+  margin-top: 12.88rem;
+  display: flex;
+  align-items: center;
+  column-gap: 3.52rem;
+
+  .about__content {
+    position: relative;
+    padding-left: 8.58rem;
+    width: 54%;
+
+    .about__title {
+      position: relative;
+      color: var(--content, #2c2c2c);
+      font-size: 3.1667rem;
+      font-weight: 800;
+      line-height: 1.31; /* 4.1649rem */
+    }
+
+    .about__desc {
+      position: relative;
+      width: 36.6667rem;
+      margin-top: 1.52rem;
+      color: var(--content, #2c2c2c);
+      font-size: 1.3333rem;
+      font-weight: 400;
+      line-height: 1.53; /* 153.125% */
+    }
+
+    .about__decor {
+      position: absolute;
+      left: 11px;
+      top: -31px;
+    }
+  }
+
+  .about__media {
+    .about__img {
+      width: 100%;
+    }
+  }
+}
+
+// info
+
+.info {
+  position: relative;
+  margin-top: 10rem;
+}
+
+.info-bg {
+  position: absolute;
+  display: block;
+  width: 100vw;
+  height: 36.0833rem;
+  border-radius: 0.8333rem;
+  background: var(--orange-100, #fff0e7);
+  left: 0;
+  top: 32.67rem;
+}
+
+.info__inner {
+  text-align: center;
+
+  .info__title {
+    color: var(--Content, #2c2c2c);
+    font-size: 3.1667rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 1.31; /* 4.1649rem */
+  }
+
+  .info__desc {
+    margin-top: 2.43rem;
+    color: var(--Content, #2c2c2c);
+    font-size: 1.3333rem;
+    font-weight: 400;
+    line-height: 1.53; /* 153.125% */
+  }
+
+  .info-list {
+    position: relative;
+    margin-top: 5rem;
+    width: 108.75rem;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    column-gap: 2.5rem;
+
+    .info__img {
+      width: 100%;
+      height: 19.5rem;
+    }
+
+    .info-item {
+      border-radius: 0.8333rem;
+      background: var(--white, #fff);
+
+      .info-item__inner {
+        margin-top: 2.42rem;
+        padding-left: 2.75rem;
+        margin-bottom: 2.47rem;
+        text-align: start;
+
+        .info-item__title {
+          color: var(--orange-700, #e05000);
+          font-size: 2rem;
+          font-weight: 600;
+          line-height: 1.33; /* 133.333% */
+        }
+
+        .info-item__desc {
+          margin-top: 0.63rem;
+          width: 23.1774rem;
+          color: var(--content, #19191b);
+          font-size: 1.3333rem;
+          font-weight: 400;
+          line-height: 1.53; /* 153.125% */
+        }
+      }
+
+      &:nth-child(2) .info-item__desc {
+        width: 30rem;
       }
     }
   }
