--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,20 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+h2 {
+  color: var(--content, #2c2c2c);
+  font-size: 3.1667rem;
+  font-weight: 800;
+  line-height: 1.31; /* 4.1649rem */
+}
+
+p.desc {
+  color: var(--content, #2c2c2c);
+  font-size: 1.3333rem;
+  font-weight: 400;
+  line-height: 1.53; /* 153.125% */
+}
+
 // header
 
 .header {
@@ -324,6 +338,124 @@ body {
 
       &:nth-child(2) .info-item__desc {
         width: 30rem;
+      }
+    }
+  }
+}
+
+// intruction
+.instruction {
+  background: #fff;
+  margin-top: 21.67rem;
+
+  .instruction__inner {
+    text-align: center;
+
+    .instruction__desc {
+      width: 38rem;
+      margin: 2.43rem auto 0;
+    }
+
+    .instruction-list {
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+      column-gap: 3.83rem;
+      margin-top: 6.15rem;
+
+      .instruction-item {
+        position: relative;
+        display: flex;
+        // align-items: center;
+        column-gap: 0.98rem;
+
+        &:before {
+          position: absolute;
+          content: "";
+          top: 0;
+          left: 3.92rem;
+
+          width: 12.3333rem;
+          height: 12.3333rem;
+          border-radius: 50%;
+          background: var(--orange-100, #fff0e7);
+        }
+
+        .instruction-item__number {
+          position: relative;
+          // top: -20px;
+          color: transparent;
+          -webkit-text-stroke: 2px var(--content);
+          font-size: 8.3333rem;
+          font-weight: 800;
+        }
+
+        .instruction-item__desc {
+          position: relative;
+          margin-top: 2rem;
+          width: 13.5rem;
+          text-align: start;
+          color: var(--content, #2c2c2c);
+          font-size: 1.3333rem;
+          font-weight: 400;
+          line-height: 1.53; /* 153.125% */
+        }
+
+        &:first-child .instruction-item__desc {
+          width: 15.4167rem;
+        }
+      }
+    }
+
+    .instruction-more {
+      margin-top: 10.33rem;
+      display: flex;
+      gap: 4.5rem;
+      margin-left: 9rem;
+
+      .instruction-more__content {
+        position: relative;
+        text-align: start;
+        flex-shrink: 0;
+        max-width: 65.5rem;
+        height: fit-content;
+        padding: 9.08rem 4.67rem 9.08rem 6.25rem;
+        border-radius: 0rem 0.8333rem 0.8333rem 0rem;
+        background: var(--white, #fff);
+        box-shadow: 0px 0px 15px -2px rgba(0, 0, 0, 0.1);
+
+        &:before {
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          content: "";
+          width: 0.833rem;
+          height: 100%;
+          border-radius: 0rem 0.8333rem 0.8333rem 0rem;
+          background: var(--green-800-main, #46b20f);
+        }
+
+        .instruction-more__desc {
+          width: 54.4167rem;
+          flex-grow: 1;
+
+          color: var(--content, #2c2c2c);
+          font-size: 2rem;
+          font-weight: 400;
+          line-height: 1.54; /* 154.167% */
+        }
+      }
+
+      .instruction__img-wrapper {
+        flex-shrink: 0;
+        width: 58.8333rem;
+        height: 44.778rem;
+        border-radius: 0.8333rem;
+
+        .instruction__img {
+          width: 100%;
+          margin-top: 3.58rem;
+        }
       }
     }
   }
