--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -30,6 +30,11 @@ p.desc {
 // header
 
 .header {
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
   background: var(--white, #fff);
   box-shadow: 0px 1.667px 8.333px 0px rgba(0, 0, 0, 0.15);
 }
@@ -50,6 +55,10 @@ p.desc {
         position: relative;
 
         &.active .nav-link {
+          color: $primaryColor;
+        }
+
+        &:hover .nav-link {
           color: $primaryColor;
         }
 
@@ -88,7 +97,7 @@ p.desc {
 // section
 .section {
   width: 100vw;
-  background: var(--Green-100, #f2ffec);
+  background: var(--green-100, #f2ffec);
   padding: 5.75rem 0;
 
   .section-title {
