--- a/css/styles.css
+++ b/css/styles.css
@@ -510,13 +510,45 @@ p.desc {
   opacity: 0.5;
   background: var(--green-100, #f2ffec);
 }
-.rule .rule-row:last-child {
+.rule .rule-row:nth-child(3) {
   flex-direction: row-reverse;
 }
-.rule .rule-row:last-child::before {
+.rule .rule-row:nth-child(3)::before {
   left: auto;
   right: 0;
   background: var(--orange-100, #fff0e7);
+}
+.rule .rule-list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 3.88rem 5.25rem;
+  margin-top: 10rem;
+}
+.rule .rule-list .rule-item {
+  display: flex;
+  column-gap: 1.58rem;
+  text-align: start;
+}
+.rule .rule-list .rule-item .rule-item__wrapper {
+  display: inline-block;
+  height: 5.5833rem;
+}
+.rule .rule-list .rule-item .rule-item__wrapper .rule-item__img {
+  width: 100%;
+}
+.rule .rule-list .rule-item .rule-item__title {
+  color: var(--content, #2c2c2c);
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.33; /* 133.333% */
+}
+.rule .rule-list .rule-item .rule-item__desc {
+  margin-top: 0.67rem;
+  color: var(--content, #2c2c2c);
+  font-size: 1.5rem;
+  font-weight: 500;
+  width: 21.6667rem;
+  height: 9.75rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
