--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -509,14 +509,52 @@ p.desc {
       background: var(--green-100, #f2ffec);
     }
 
-    &:last-child {
+    &:nth-child(3) {
       flex-direction: row-reverse;
     }
 
-    &:last-child::before {
+    &:nth-child(3)::before {
       left: auto;
       right: 0;
       background: var(--orange-100, #fff0e7);
+    }
+  }
+
+  .rule-list {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 3.88rem 5.25rem;
+    margin-top: 10rem;
+
+    .rule-item {
+      display: flex;
+      column-gap: 1.58rem;
+      text-align: start;
+
+      .rule-item__wrapper {
+        display: inline-block;
+        height: 5.5833rem;
+
+        .rule-item__img {
+          width: 100%;
+        }
+      }
+
+      .rule-item__title {
+        color: var(--content, #2c2c2c);
+        font-size: 2rem;
+        font-weight: 600;
+        line-height: 1.33; /* 133.333% */
+      }
+
+      .rule-item__desc {
+        margin-top: 0.67rem;
+        color: var(--content, #2c2c2c);
+        font-size: 1.5rem;
+        font-weight: 500;
+        width: 21.6667rem;
+        height: 9.75rem;
+      }
     }
   }
 }
