--- a/css/styles.css
+++ b/css/styles.css
@@ -551,4 +551,73 @@ p.desc {
   height: 9.75rem;
 }
 
+.footer {
+  margin-top: 13.3rem;
+  background: var(--Green-100, #f2ffec);
+  padding-top: 3rem;
+}
+.footer .footer-col + .footer-col {
+  margin-top: 3.67rem;
+}
+.footer .footer-col:nth-child(3) .footer-item + .footer-item {
+  font-weight: 600;
+}
+.footer .footer-row {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 10.67rem;
+  padding-bottom: 7.15rem;
+  border-bottom: 1px solid var(--grey-500-main, #a3a3a3);
+}
+.footer .footer-row .footer__desc,
+.footer .footer-row .footer-item,
+.footer .footer-row .footer-link {
+  color: var(--content, #2c2c2c);
+  font-size: 1.3333rem;
+  font-weight: 400;
+  line-height: 1.53; /* 153.125% */
+}
+.footer .footer-row .footer__desc {
+  width: 19.1667rem;
+}
+.footer .footer-row .footer__title {
+  color: var(--green-800-main, #46b20f);
+  font-size: 1.6667rem;
+  font-weight: 600;
+  line-height: 1.3; /* 130% */
+}
+.footer .footer-row .footer-list {
+  margin-top: 1.3rem;
+}
+.footer .footer-row .footer-list .footer-item {
+  margin-top: 0.67rem;
+}
+.footer .footer-row .footer-list .footer-link,
+.footer .footer-row .footer-list .footer-item {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+.footer .footer-bottom {
+  margin-top: 2.42rem;
+  padding-bottom: 2.67rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer .footer-bottom__list {
+  display: flex;
+  align-items: center;
+  column-gap: 2.63rem;
+}
+.footer .footer-bottom__list .footer-bottom__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background: var(--green-200, #dcffca);
+}
+
 /*# sourceMappingURL=styles.css.map */
