--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,6 +27,10 @@ p.desc {
   line-height: 1.53; /* 153.125% */
 }
 
+a:hover {
+  color: $primaryColor;
+}
+
 // header
 
 .header {
@@ -217,6 +221,11 @@ p.desc {
         font-size: 1.6667rem;
         font-weight: 700;
         border: none;
+        cursor: pointer;
+
+        &:hover {
+          opacity: 0.7;
+        }
       }
     }
   }
@@ -606,6 +615,10 @@ p.desc {
 
       .footer-item {
         margin-top: 0.67rem;
+
+        &:hover .footer-link {
+          color: $primaryColor;
+        }
       }
 
       .footer-link,
@@ -638,6 +651,10 @@ p.desc {
       height: 4rem;
       border-radius: 50%;
       background: var(--green-200, #dcffca);
+
+      &:hover {
+        opacity: 0.7;
+      }
     }
   }
 }
