--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,652 +9,13 @@
 @import "pages/home/products";
 @import "pages/home/posts";
 
-body {
-  font-family: "Inter", sans-serif;
-}
-
-h2 {
-  color: var(--content, #2c2c2c);
-  font-size: 3.1667rem;
-  font-weight: 800;
-  line-height: 1.31; /* 4.1649rem */
-}
-
-p.desc {
-  color: var(--content, #2c2c2c);
-  font-size: 1.3333rem;
-  font-weight: 400;
-  line-height: 1.53; /* 153.125% */
-}
-
-a:hover {
-  color: $primaryColor;
-}
-
-// header
-
-.header {
-  position: sticky;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: var(--white, #fff);
-  box-shadow: 0px 1.667px 8.333px 0px rgba(0, 0, 0, 0.15);
-}
-
-.header__inner {
-  display: flex;
-  align-items: center;
-
-  .nav {
-    margin-left: auto;
-
-    .nav-list {
-      display: flex;
-      margin-top: 30px;
-
-      .nav-item {
-        margin-right: 50px;
-        position: relative;
-
-        &.active .nav-link {
-          color: $primaryColor;
-        }
-
-        &:hover .nav-link {
-          color: $primaryColor;
-        }
-
-        &.active::before {
-          position: absolute;
-          display: inline-block;
-          width: 100%;
-          height: 1px;
-          content: "";
-          background: $primaryColor;
-          bottom: -3.47rem;
-        }
-
-        .nav-link {
-          color: var(--content, #2c2c2c);
-          font-size: 1.6667rem;
-          font-weight: 600;
-          line-height: 1.3; /* 130% */
-        }
-      }
-    }
-  }
-
-  .header-action {
-    margin-top: 30px;
-    .header-icon:first-child {
-      margin-right: 50px;
-    }
-
-    .header-icon {
-      cursor: pointer;
-    }
-  }
-}
-
-// section
-.section {
-  width: 100vw;
-  background: var(--green-100, #f2ffec);
-  padding: 5.75rem 0;
-
-  .section-title {
-    color: var(--content, #2c2c2c);
-    font-size: 4.3333rem;
-    font-weight: 700;
-  }
-}
-
-// product
-.product__inner {
-  width: 975px;
-  padding-top: 10rem;
-  margin: 0 auto;
-
-  .product__top-title {
-    color: var(--content, #2c2c2c);
-    font-size: 3.1667rem;
-    font-weight: 800;
-    line-height: 4.16; /* 4.1649rem */
-    text-align: center;
-  }
-
-  .product-list {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 11.59rem 8.33rem;
-    margin-top: 5rem;
-
-    .product-item {
-      text-align: center;
-      position: relative;
-
-      &:nth-child(3) .product-item__title:first-line {
-        word-spacing: 0;
-      }
-
-      &::before {
-        position: absolute;
-        display: inline-block;
-        top: 0;
-        left: 50%;
-        translate: -50%;
-        content: "";
-        width: 26.9316rem;
-        height: 26.9316rem;
-        border-radius: 50%;
-        background: var(--orange-300, #ffba94);
-      }
-
-      &:nth-child(2)::before,
-      &:nth-child(5)::before {
-        background: var(--Green-300, #c5ffa8);
-      }
-
-      .product__img {
-        position: relative;
-        margin-top: 11.46rem;
-        width: 24rem;
-        height: 24rem;
-      }
-
-      .product-item__title {
-        color: var(--content, #2c2c2c);
-        font-size: 2.3333rem;
-        font-weight: 700;
-        margin-top: 1.72rem;
-        position: relative;
-
-        &::first-line {
-          word-spacing: 999px;
-        }
-
-        &::before {
-          position: absolute;
-          display: inline-block;
-          content: "";
-          width: 4.0833rem;
-          height: 1px;
-          background: var(--grey-500-main, #a3a3a3);
-          bottom: -1.29rem;
-          left: 50%;
-          translate: -50%;
-        }
-      }
-
-      .product-item__desc {
-        margin-top: 2.95rem;
-        color: var(--Grey-800, #656565);
-        font-size: 1.6667rem;
-        font-weight: 400;
-        line-height: 1.3; /* 130% */
-      }
-
-      .product-item__price {
-        margin-top: 0.63rem;
-        color: var(--Content, #2c2c2c);
-        font-size: 1.6667rem;
-        font-weight: 400;
-        line-height: 1.3; /* 130% */
-
-        span {
-          color: var(--Content, #2c2c2c);
-          font-size: 2.3333rem;
-          font-weight: 600;
-          line-height: 2.6667rem;
-        }
-      }
-
-      .product-item__btn {
-        display: inline-block;
-        margin-top: 1.09rem;
-        padding: 1.33rem 1.17rem;
-        border-radius: 0.6667rem;
-        background: var(--green-800-main, #46b20f);
-        color: var(--white, #fff);
-        font-size: 1.6667rem;
-        font-weight: 700;
-        border: none;
-        cursor: pointer;
-
-        &:hover {
-          opacity: 0.7;
-        }
-      }
-    }
-  }
-}
-
-// about
-.about__inner {
-  margin-top: 12.88rem;
-  display: flex;
-  align-items: center;
-  column-gap: 3.52rem;
-
-  .about__content {
-    position: relative;
-    padding-left: 8.58rem;
-    width: 54%;
-
-    .about__title {
-      position: relative;
-      color: var(--content, #2c2c2c);
-      font-size: 3.1667rem;
-      font-weight: 800;
-      line-height: 1.31; /* 4.1649rem */
-    }
-
-    .about__desc {
-      position: relative;
-      width: 36.6667rem;
-      margin-top: 1.52rem;
-      color: var(--content, #2c2c2c);
-      font-size: 1.3333rem;
-      font-weight: 400;
-      line-height: 1.53; /* 153.125% */
-    }
-
-    .about__decor {
-      position: absolute;
-      left: 11px;
-      top: -31px;
-    }
-  }
-
-  .about__media {
-    .about__img {
-      width: 100%;
-    }
-  }
-}
-
-// info
-
-.info {
-  position: relative;
-  margin-top: 10rem;
-}
-
-.info-bg {
-  position: absolute;
-  display: block;
-  width: 100vw;
-  height: 36.0833rem;
-  border-radius: 0.8333rem;
-  background: var(--orange-100, #fff0e7);
-  left: 0;
-  top: 32.67rem;
-}
-
-.info__inner {
-  text-align: center;
-
-  .info__title {
-    color: var(--Content, #2c2c2c);
-    font-size: 3.1667rem;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 1.31; /* 4.1649rem */
-  }
-
-  .info__desc {
-    margin-top: 2.43rem;
-    color: var(--Content, #2c2c2c);
-    font-size: 1.3333rem;
-    font-weight: 400;
-    line-height: 1.53; /* 153.125% */
-  }
-
-  .info-list {
-    position: relative;
-    margin-top: 5rem;
-    width: 108.75rem;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: center;
-    column-gap: 2.5rem;
-    margin: 5rem auto 0;
-
-    .info__img {
-      width: 100%;
-      height: 19.5rem;
-    }
-
-    .info-item {
-      border-radius: 0.8333rem;
-      background: var(--white, #fff);
-
-      .info-item__inner {
-        margin-top: 2.42rem;
-        padding-left: 2.75rem;
-        margin-bottom: 2.47rem;
-        text-align: start;
-
-        .info-item__title {
-          color: var(--orange-700, #e05000);
-          font-size: 2rem;
-          font-weight: 600;
-          line-height: 1.33; /* 133.333% */
-        }
-
-        .info-item__desc {
-          margin-top: 0.63rem;
-          width: 23.1774rem;
-          color: var(--content, #19191b);
-          font-size: 1.3333rem;
-          font-weight: 400;
-          line-height: 1.53; /* 153.125% */
-        }
-      }
-
-      &:nth-child(2) .info-item__desc {
-        width: 30rem;
-      }
-    }
-  }
-}
-
-// intruction
-.instruction {
-  background: #fff;
-  margin-top: 21.67rem;
-
-  .instruction__inner {
-    text-align: center;
-
-    .instruction__desc {
-      width: 38rem;
-      margin: 2.43rem auto 0;
-    }
-
-    .instruction-list {
-      display: grid;
-      grid-template-columns: auto auto auto auto;
-      column-gap: 3.83rem;
-      margin-top: 6.15rem;
-
-      .instruction-item {
-        position: relative;
-        display: flex;
-        // align-items: center;
-        column-gap: 0.98rem;
-
-        &:before {
-          position: absolute;
-          content: "";
-          top: 0;
-          left: 3.92rem;
-
-          width: 12.3333rem;
-          height: 12.3333rem;
-          border-radius: 50%;
-          background: var(--orange-100, #fff0e7);
-        }
-
-        .instruction-item__number {
-          position: relative;
-          // top: -20px;
-          color: transparent;
-          -webkit-text-stroke: 2px var(--content);
-          font-size: 8.3333rem;
-          font-weight: 800;
-        }
-
-        .instruction-item__desc {
-          position: relative;
-          margin-top: 2rem;
-          width: 13.5rem;
-          text-align: start;
-          color: var(--content, #2c2c2c);
-          font-size: 1.3333rem;
-          font-weight: 400;
-          line-height: 1.53; /* 153.125% */
-        }
-
-        &:first-child .instruction-item__desc {
-          width: 15.4167rem;
-        }
-      }
-    }
-
-    .instruction-more {
-      margin-top: 10.33rem;
-      display: flex;
-      gap: 4.5rem;
-      margin-left: 9rem;
-
-      .instruction-more__content {
-        position: relative;
-        text-align: start;
-        flex-shrink: 0;
-        max-width: 65.5rem;
-        height: fit-content;
-        padding: 9.08rem 4.67rem 9.08rem 6.25rem;
-        border-radius: 0rem 0.8333rem 0.8333rem 0rem;
-        background: var(--white, #fff);
-        box-shadow: 0px 0px 15px -2px rgba(0, 0, 0, 0.1);
-
-        &:before {
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          content: "";
-          width: 0.833rem;
-          height: 100%;
-          border-radius: 0rem 0.8333rem 0.8333rem 0rem;
-          background: var(--green-800-main, #46b20f);
-        }
-
-        .instruction-more__desc {
-          width: 54.4167rem;
-          flex-grow: 1;
-
-          color: var(--content, #2c2c2c);
-          font-size: 2rem;
-          font-weight: 400;
-          line-height: 1.54; /* 154.167% */
-        }
-      }
-
-      .instruction__img-wrapper {
-        flex-shrink: 0;
-        width: 58.8333rem;
-        height: 44.778rem;
-        border-radius: 0.8333rem;
-        margin-top: 3.58rem;
-
-        .instruction__img {
-          width: 100%;
-        }
-      }
-    }
-  }
-}
-
-// rule
-.rule {
-  margin-top: 13.33rem;
-  text-align: center;
-
-  .rule-row {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    column-gap: 5.08rem;
-    margin-top: 11.6rem;
-
-    .rule-media {
-      position: relative;
-      width: 33%;
-      flex-shrink: 0;
-
-      .rule__img {
-        width: 100%;
-      }
-    }
-
-    .rule__desc {
-      position: relative;
-      width: 45.4%;
-      text-align: start;
-    }
-    &::before {
-      position: absolute;
-      top: -6.67rem;
-      left: 0;
-      display: block;
-      content: "";
-      width: 140.5rem;
-      height: 35.75rem;
-      opacity: 0.5;
-      background: var(--green-100, #f2ffec);
-    }
-
-    &:nth-child(3) {
-      flex-direction: row-reverse;
-    }
-
-    &:nth-child(3)::before {
-      left: auto;
-      right: 0;
-      background: var(--orange-100, #fff0e7);
-    }
-  }
-
-  .rule-list {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 3.88rem 5.25rem;
-    margin-top: 10rem;
-
-    .rule-item {
-      display: flex;
-      column-gap: 1.58rem;
-      text-align: start;
-
-      .rule-item__wrapper {
-        display: inline-block;
-        height: 5.5833rem;
-
-        .rule-item__img {
-          width: 100%;
-        }
-      }
-
-      .rule-item__title {
-        color: var(--content, #2c2c2c);
-        font-size: 2rem;
-        font-weight: 600;
-        line-height: 1.33; /* 133.333% */
-      }
-
-      .rule-item__desc {
-        margin-top: 0.67rem;
-        color: var(--content, #2c2c2c);
-        font-size: 1.5rem;
-        font-weight: 500;
-        width: 21.6667rem;
-        height: 9.75rem;
-      }
-    }
-  }
-}
-
-// footer
-
-.footer {
-  margin-top: 13.3rem;
-  background: var(--Green-100, #f2ffec);
-  padding-top: 3rem;
-
-  .footer-col + .footer-col {
-    margin-top: 3.67rem;
-  }
-
-  .footer-col:nth-child(3) .footer-item + .footer-item {
-    font-weight: 600;
-  }
-
-  .footer-row {
-    display: flex;
-    justify-content: space-between;
-    column-gap: 10.67rem;
-    padding-bottom: 7.15rem;
-    border-bottom: 1px solid var(--grey-500-main, #a3a3a3);
-
-    .footer__desc,
-    .footer-item,
-    .footer-link {
-      color: var(--content, #2c2c2c);
-      font-size: 1.3333rem;
-      font-weight: 400;
-      line-height: 1.53; /* 153.125% */
-    }
-
-    .footer__desc {
-      width: 19.1667rem;
-    }
-
-    .footer__title {
-      color: var(--green-800-main, #46b20f);
-      font-size: 1.6667rem;
-      font-weight: 600;
-      line-height: 1.3; /* 130% */
-    }
-
-    .footer-list {
-      margin-top: 1.3rem;
-
-      .footer-item {
-        margin-top: 0.67rem;
-
-        &:hover .footer-link {
-          color: $primaryColor;
-        }
-      }
-
-      .footer-link,
-      .footer-item {
-        display: flex;
-        align-items: center;
-        column-gap: 1rem;
-      }
-    }
-  }
-
-  .footer-bottom {
-    margin-top: 2.42rem;
-    padding-bottom: 2.67rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .footer-bottom__list {
-    display: flex;
-    align-items: center;
-    column-gap: 2.63rem;
-
-    .footer-bottom__link {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 4rem;
-      height: 4rem;
-      border-radius: 50%;
-      background: var(--green-200, #dcffca);
-
-      &:hover {
-        opacity: 0.7;
-      }
-    }
-  }
-}
+//product
+@import "./pages/product/common";
+@import "./pages/product/header";
+@import "./pages/product/hero";
+@import "./pages/product/product";
+@import "./pages/product/about";
+@import "./pages/product/quality";
+@import "./pages/product/instruction";
+@import "./pages/product/rule";
+@import "./pages/product/footer";
