--- a/scss/pages/product/_footer.scss
+++ b/scss/pages/product/_footer.scss
@@ -83,7 +83,7 @@
       background: var(--green-200, #dcffca);
 
       &:hover {
-        opacity: 0.7;
+        background: var(--orange-600, #ff6916);
       }
     }
   }
