--- a/scss/pages/product/_product.scss
+++ b/scss/pages/product/_product.scss
@@ -111,7 +111,7 @@
         cursor: pointer;
 
         &:hover {
-          opacity: 0.7;
+          background: var(--orange-600, #ff6916);
         }
       }
     }
