--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,89 @@ h6 {
   --max-width: 1440px;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: 0;
+}
+
+html {
+  font-size: 10px;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: Inter, san-serif;
+  color: #2c2c2c;
+  line-height: 1.27;
+  font-size: 1.6rem;
+}
+
+a {
+  text-decoration: none;
+  color: #2c2c2c;
+}
+a:hover {
+  color: #46b20f;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #2c2c2c;
+}
+
+:root {
+  --grey-1000: #3d3c3c;
+  --grey-900: #515151;
+  --grey-800: #656565;
+  --grey-700: #7a7a7a;
+  --grey-600: #8e8e8e;
+  --grey-500: #a3a3a3;
+  --grey-400: #b7b7b7;
+  --grey-300: #cbcbcb;
+  --grey-200: #e0e0e0;
+  --grey-100: #f4f4f4;
+  --green-1000: #216000;
+  --green-900: #2e8900;
+  --green-800: #46b20f;
+  --green-700: #63db25;
+  --green-600: #81ff41;
+  --green-500: #98ff64;
+  --green-400: #aeff86;
+  --green-300: #c5ffa8;
+  --green-200: #dcffca;
+  --green-100: #f2ffec;
+  --orange-1000: #662400;
+  --orange-900: #8e3300;
+  --orange-800: #b74200;
+  --orange-700: #e05000;
+  --orange-600: #ff6916;
+  --orange-500: #ff8440;
+  --orange-400: #ff9f6a;
+  --orange-300: #ffba94;
+  --orange-200: #ffd5bd;
+  --orange-100: #fff0e7;
+  --main-color: var(--green-800);
+  --content: #2c2c2c;
+  --white: #fff;
+  --max-width: 1440px;
+}
+
 body {
   font-family: "Inter", sans-serif;
   overflow-x: hidden;
@@ -156,6 +239,28 @@ a:hover {
 }
 .header__inner .header-action .header-icon:first-child {
   margin-right: 50px;
+}
+.header__inner .header-action span {
+  display: inline-block;
+  position: relative;
+}
+.header__inner .header-action span::before {
+  display: inline-block;
+  position: absolute;
+  top: -3px;
+  left: 25px;
+  content: "3";
+  width: 1.33rem;
+  height: 1.33rem;
+  color: white;
+  border-radius: 50%;
+  background: var(--orange-700, #e05000);
+  color: var(--White, #fff);
+  font-family: inherit;
+  font-size: 1.0833rem;
+  font-weight: 500;
+  line-height: 1.33rem; /* 188.462% */
+  text-align: center;
 }
 .header__inner .header-action .header-icon {
   cursor: pointer;
@@ -533,6 +638,611 @@ a:hover {
   grid-template-columns: auto auto auto;
   gap: 3.88rem 5.25rem;
   margin-top: 10rem;
+}
+.rule .rule-list .rule-item {
+  display: flex;
+  column-gap: 1.58rem;
+  text-align: start;
+}
+.rule .rule-list .rule-item .rule-item__wrapper {
+  display: inline-block;
+  height: 5.5833rem;
+}
+.rule .rule-list .rule-item .rule-item__wrapper .rule-item__img {
+  width: 100%;
+}
+.rule .rule-list .rule-item .rule-item__title {
+  color: var(--content, #2c2c2c);
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.33; /* 133.333% */
+}
+.rule .rule-list .rule-item .rule-item__desc {
+  margin-top: 0.67rem;
+  color: var(--content, #2c2c2c);
+  font-size: 1.5rem;
+  font-weight: 500;
+  width: 21.6667rem;
+  height: 9.75rem;
+}
+
+.footer {
+  margin-top: 13.3rem;
+  background: var(--Green-100, #f2ffec);
+  padding-top: 3rem;
+}
+.footer .footer-col + .footer-col {
+  margin-top: 3.67rem;
+}
+.footer .footer-col:nth-child(3) .footer-item + .footer-item {
+  font-weight: 600;
+}
+.footer .footer-row {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 10.67rem;
+  padding-bottom: 7.15rem;
+  border-bottom: 1px solid var(--grey-500-main, #a3a3a3);
+}
+.footer .footer-row .footer__desc,
+.footer .footer-row .footer-item,
+.footer .footer-row .footer-link {
+  color: var(--content, #2c2c2c);
+  font-size: 1.3333rem;
+  font-weight: 400;
+  line-height: 1.53; /* 153.125% */
+}
+.footer .footer-row .footer__desc {
+  width: 19.1667rem;
+}
+.footer .footer-row .footer__title {
+  color: var(--green-800-main, #46b20f);
+  font-size: 1.6667rem;
+  font-weight: 600;
+  line-height: 1.3; /* 130% */
+}
+.footer .footer-row .footer-list {
+  margin-top: 1.3rem;
+}
+.footer .footer-row .footer-list .footer-item {
+  margin-top: 0.67rem;
+}
+.footer .footer-row .footer-list .footer-item:hover .footer-link {
+  color: #46b20f;
+}
+.footer .footer-row .footer-list .footer-link,
+.footer .footer-row .footer-list .footer-item {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+.footer .footer-bottom {
+  margin-top: 2.42rem;
+  padding-bottom: 2.67rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer .footer-bottom__list {
+  display: flex;
+  align-items: center;
+  column-gap: 2.63rem;
+}
+.footer .footer-bottom__list .footer-bottom__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background: var(--green-200, #dcffca);
+}
+.footer .footer-bottom__list .footer-bottom__link:hover {
+  background: var(--orange-600, #ff6916);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: 0;
+}
+
+html {
+  font-size: 10px;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: Inter, san-serif;
+  color: #2c2c2c;
+  line-height: 1.27;
+  font-size: 1.6rem;
+}
+
+a {
+  text-decoration: none;
+  color: #2c2c2c;
+}
+a:hover {
+  color: #46b20f;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #2c2c2c;
+}
+
+:root {
+  --grey-1000: #3d3c3c;
+  --grey-900: #515151;
+  --grey-800: #656565;
+  --grey-700: #7a7a7a;
+  --grey-600: #8e8e8e;
+  --grey-500: #a3a3a3;
+  --grey-400: #b7b7b7;
+  --grey-300: #cbcbcb;
+  --grey-200: #e0e0e0;
+  --grey-100: #f4f4f4;
+  --green-1000: #216000;
+  --green-900: #2e8900;
+  --green-800: #46b20f;
+  --green-700: #63db25;
+  --green-600: #81ff41;
+  --green-500: #98ff64;
+  --green-400: #aeff86;
+  --green-300: #c5ffa8;
+  --green-200: #dcffca;
+  --green-100: #f2ffec;
+  --orange-1000: #662400;
+  --orange-900: #8e3300;
+  --orange-800: #b74200;
+  --orange-700: #e05000;
+  --orange-600: #ff6916;
+  --orange-500: #ff8440;
+  --orange-400: #ff9f6a;
+  --orange-300: #ffba94;
+  --orange-200: #ffd5bd;
+  --orange-100: #fff0e7;
+  --main-color: var(--green-800);
+  --content: #2c2c2c;
+  --white: #fff;
+  --max-width: 1440px;
+}
+
+.header {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: var(--white, #fff);
+  box-shadow: 0px 1.667px 8.333px 0px rgba(0, 0, 0, 0.15);
+}
+
+.header__inner {
+  display: flex;
+  align-items: center;
+}
+.header__inner .nav {
+  margin-left: auto;
+}
+.header__inner .nav .nav-list {
+  display: flex;
+  margin-top: 30px;
+}
+.header__inner .nav .nav-list .nav-item {
+  margin-right: 50px;
+  position: relative;
+}
+.header__inner .nav .nav-list .nav-item.active .nav-link {
+  color: #46b20f;
+}
+.header__inner .nav .nav-list .nav-item:hover .nav-link {
+  color: #46b20f;
+}
+.header__inner .nav .nav-list .nav-item.active::before, .header__inner .nav .nav-list .nav-item:hover::before {
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 1px;
+  content: "";
+  background: #46b20f;
+  bottom: -4rem;
+}
+.header__inner .nav .nav-list .nav-item .nav-link {
+  color: var(--content, #2c2c2c);
+  font-size: 1.6667rem;
+  font-weight: 600;
+  line-height: 1.3; /* 130% */
+  padding-bottom: 4rem;
+}
+.header__inner .header-action {
+  margin-top: 30px;
+}
+.header__inner .header-action .header-icon:first-child {
+  margin-right: 50px;
+}
+.header__inner .header-action span {
+  display: inline-block;
+  position: relative;
+}
+.header__inner .header-action span::before {
+  display: inline-block;
+  position: absolute;
+  top: -3px;
+  left: 25px;
+  content: "3";
+  width: 1.33rem;
+  height: 1.33rem;
+  color: white;
+  border-radius: 50%;
+  background: var(--orange-700, #e05000);
+  color: var(--White, #fff);
+  font-family: inherit;
+  font-size: 1.0833rem;
+  font-weight: 500;
+  line-height: 1.33rem; /* 188.462% */
+  text-align: center;
+}
+.header__inner .header-action .header-icon {
+  cursor: pointer;
+}
+
+.hero {
+  padding-top: 135px;
+}
+.hero__inner {
+  display: flex;
+  align-items: center;
+}
+.hero__content {
+  width: 44%;
+  flex-shrink: 0;
+}
+.hero__media {
+  position: relative;
+  margin-left: 11.1rem;
+  width: 48vw;
+  height: 71.9029rem;
+  flex-shrink: 0;
+  border-radius: 1.6667rem 0rem 0rem 1.6667rem;
+  background: var(--green-200, #dcffca);
+}
+.hero__sub-title {
+  color: var(--content, #2c2c2c);
+  font-size: 3.6667rem;
+  font-weight: 800;
+}
+.hero__title {
+  color: var(--content, #2c2c2c);
+  font-size: 4.3333rem;
+  font-weight: 800;
+}
+.hero__desc {
+  margin-top: 2.77rem;
+  max-width: 87%;
+  color: var(--content, #2c2c2c);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.27; /* 127.604% */
+  margin-top: 2.77rem;
+}
+.hero__img {
+  position: absolute;
+  left: -16.6rem;
+  max-width: 92.3%;
+}
+.hero__brand-name {
+  display: inline-block;
+  position: absolute;
+  top: 5.5rem;
+  right: 3.42rem;
+  width: 57rem;
+  height: 57rem;
+  color: var(--green-1000, #216000);
+  font-size: 16.6667rem;
+  font-weight: 800;
+  line-height: 1; /* 16.6667rem */
+  opacity: 0.15;
+  word-wrap: break-word;
+  writing-mode: vertical-rl;
+}
+
+.statistics {
+  margin-top: 10rem;
+}
+.statistics__inner {
+  position: relative;
+}
+.statistics__title {
+  margin: 0 auto;
+  max-width: 47%;
+  color: var(--content, #2c2c2c);
+  text-align: center;
+  font-size: 3.1667rem;
+  font-weight: 800;
+  line-height: 1.31; /* 4.1649rem */
+}
+.statistics__desc {
+  margin: 2.43rem auto 0;
+  max-width: 54%;
+  text-align: center;
+  color: var(--Content, #2c2c2c);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.27; /* 127.604% */
+}
+.statistics__list {
+  position: relative;
+  padding-top: 9rem;
+  padding-bottom: 11.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 2.17rem;
+}
+.statistics__list::before, .statistics__list::after {
+  display: inline-block;
+  position: absolute;
+  content: "";
+  width: 23.5rem;
+  height: 23.5rem;
+  flex-shrink: 0;
+  border-radius: 50%;
+  background: var(--green-200, #dcffca);
+}
+.statistics__list::before {
+  top: 0;
+  left: 0;
+}
+.statistics__list::after {
+  bottom: 0;
+  right: 0;
+  background: var(--orange-200, #ffd5bd);
+}
+.statistics-item {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 3.33rem;
+  width: 25%;
+  border-radius: 0.3333rem;
+  background: var(--white, #fff);
+  box-shadow: -5.833px 8.333px 72.5px 0px rgba(54, 54, 54, 0.12);
+}
+.statistics-item:nth-child(2) {
+  padding-top: 6.08rem;
+  padding-bottom: 6.08rem;
+}
+.statistics-item:nth-child(2) .statistics__icon-wrapper {
+  background: var(--green-100, #f2ffec);
+}
+.statistics__icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8.3333rem;
+  height: 8.3333rem;
+  border-radius: 1rem;
+  background: var(--orange-100, #fff0e7);
+}
+.statistics__icon {
+  width: 4.5rem;
+  height: 4.5rem;
+}
+.statistics__number {
+  margin-top: 2.33rem;
+  color: var(--content, #2c2c2c);
+  font-size: 4.3333rem;
+  font-weight: 800;
+}
+.statistics-item__desc {
+  margin-top: 2.47rem;
+}
+
+.product__inner {
+  width: 975px;
+  padding-top: 10rem;
+  margin: 0 auto;
+}
+.product__inner .product__top-title {
+  color: var(--content, #2c2c2c);
+  font-size: 3.1667rem;
+  font-weight: 800;
+  line-height: 4.16; /* 4.1649rem */
+  text-align: center;
+}
+.product__inner .product-list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 11.59rem 8.33rem;
+  margin-top: 5rem;
+}
+.product__inner .product-list .product-item {
+  text-align: center;
+  position: relative;
+}
+.product__inner .product-list .product-item:nth-child(3) .product-item__title:first-line {
+  word-spacing: 0;
+}
+.product__inner .product-list .product-item::before {
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  left: 50%;
+  translate: -50%;
+  content: "";
+  width: 26.9316rem;
+  height: 26.9316rem;
+  border-radius: 50%;
+  background: var(--orange-300, #ffba94);
+}
+.product__inner .product-list .product-item:nth-child(2)::before, .product__inner .product-list .product-item:nth-child(5)::before {
+  background: var(--Green-300, #c5ffa8);
+}
+.product__inner .product-list .product-item .product__img {
+  position: relative;
+  margin-top: 11.46rem;
+  width: 24rem;
+  height: 24rem;
+}
+.product__inner .product-list .product-item .product-item__title {
+  color: var(--content, #2c2c2c);
+  font-size: 2.3333rem;
+  font-weight: 700;
+  margin-top: 1.72rem;
+  position: relative;
+}
+.product__inner .product-list .product-item .product-item__title::first-line {
+  word-spacing: 999px;
+}
+.product__inner .product-list .product-item .product-item__title::before {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  width: 4.0833rem;
+  height: 1px;
+  background: var(--grey-500-main, #a3a3a3);
+  bottom: -1.29rem;
+  left: 50%;
+  translate: -50%;
+}
+.product__inner .product-list .product-item .product-item__desc {
+  margin-top: 2.95rem;
+  color: var(--Grey-800, #656565);
+  font-size: 1.6667rem;
+  font-weight: 400;
+  line-height: 1.3; /* 130% */
+}
+.product__inner .product-list .product-item .product-item__price {
+  margin-top: 0.63rem;
+  color: var(--Content, #2c2c2c);
+  font-size: 1.6667rem;
+  font-weight: 400;
+  line-height: 1.3; /* 130% */
+}
+.product__inner .product-list .product-item .product-item__price span {
+  color: var(--Content, #2c2c2c);
+  font-size: 2.3333rem;
+  font-weight: 600;
+  line-height: 2.6667rem;
+}
+.product__inner .product-list .product-item .product-item__btn {
+  display: inline-block;
+  margin-top: 1.09rem;
+  padding: 1.33rem 1.17rem;
+  border-radius: 0.6667rem;
+  background: var(--green-800-main, #46b20f);
+  color: var(--white, #fff);
+  font-size: 1.6667rem;
+  font-weight: 700;
+  border: none;
+  cursor: pointer;
+}
+.product__inner .product-list .product-item .product-item__btn:hover {
+  background: var(--orange-600, #ff6916);
+}
+
+.quality {
+  position: relative;
+  margin-top: 10rem;
+}
+
+.quality-bg {
+  position: absolute;
+  display: block;
+  width: 100vw;
+  height: 36.0833rem;
+  border-radius: 0.8333rem;
+  background: var(--orange-100, #fff0e7);
+  left: 0;
+  top: 32.67rem;
+}
+
+.quality__inner {
+  text-align: center;
+}
+.quality__inner .quality__title {
+  color: var(--Content, #2c2c2c);
+  font-size: 3.1667rem;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 1.31; /* 4.1649rem */
+}
+.quality__inner .quality__desc {
+  margin-top: 2.43rem;
+  color: var(--Content, #2c2c2c);
+  font-size: 1.3333rem;
+  font-weight: 400;
+  line-height: 1.53; /* 153.125% */
+}
+.quality__inner .quality-list {
+  position: relative;
+  margin-top: 5rem;
+  width: 108.75rem;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+  column-gap: 2.5rem;
+  margin: 5rem auto 0;
+}
+.quality__inner .quality-list .quality__img {
+  width: 100%;
+  height: 19.5rem;
+}
+.quality__inner .quality-list .quality-item {
+  border-radius: 0.8333rem;
+  background: var(--white, #fff);
+}
+.quality__inner .quality-list .quality-item .quality-item__inner {
+  margin-top: 2.42rem;
+  padding-left: 2.75rem;
+  margin-bottom: 2.47rem;
+  text-align: start;
+}
+.quality__inner .quality-list .quality-item .quality-item__inner .quality-item__title {
+  color: var(--orange-700, #e05000);
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.33; /* 133.333% */
+}
+.quality__inner .quality-list .quality-item .quality-item__inner .quality-item__desc {
+  margin-top: 0.63rem;
+  width: 23.1774rem;
+  color: var(--content, #19191b);
+  font-size: 1.3333rem;
+  font-weight: 400;
+  line-height: 1.53; /* 153.125% */
+}
+.quality__inner .quality-list .quality-item:nth-child(2) .quality-item__desc {
+  width: 30rem;
+}
+
+.rule {
+  margin-top: 13.33rem;
+  padding: 13.33rem 0;
+  text-align: center;
+}
+.rule .rule-list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 3.88rem 5.25rem;
 }
 .rule .rule-list .rule-item {
   display: flex;
