--- a/scss/product.scss
+++ b/scss/product.scss
@@ -1,3 +1,10 @@
+@import "./partials/variables";
+@import "./partials/reset";
+@import "./partials/mixin";
+@import "./partials/placeholder";
+@import "./partials/base";
+@import "./partials/root";
+
 @import "./pages/product/common";
 @import "./pages/product/header";
 @import "./pages/product/hero";
