--- a/scss/home.scss
+++ b/scss/home.scss
@@ -8,9 +8,9 @@
 @import "./pages/home/header";
 @import "./pages/home/hero";
 @import "./pages/home/statistics";
-
 @import "./pages/home/product";
+@import "./pages/home/news";
 @import "./pages/home/quality";
 @import "./pages/home/rule";
-
+@import "./pages/home/form";
 @import "./pages/home/footer";
