--- a/css/product.css
+++ b/css/product.css
@@ -44,6 +44,12 @@ h6 {
   color: #2c2c2c;
 }
 
+input,
+a,
+textarea {
+  font-family: inherit;
+}
+
 :root {
   --grey-1000: #3d3c3c;
   --grey-900: #515151;
