--- a/scss/pages/home/_news.scss
+++ b/scss/pages/home/_news.scss
@@ -16,7 +16,7 @@
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.27; /* 127.604% */
-    width: 65.75rem;
+    max-width: 60%; //65.75rem
   }
 
   &__list {
