--- a/css/home.css
+++ b/css/home.css
@@ -100,6 +100,7 @@ textarea {
 .header__inner {
   display: flex;
   align-items: center;
+  max-width: 100%;
 }
 .header__inner .nav {
   margin-left: auto;
@@ -165,7 +166,38 @@ textarea {
 .header__inner .header-action .header-icon {
   cursor: pointer;
 }
+.header__inner .bars {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+}
 
+@media screen and (max-width: 1399.98px) {
+  .header {
+    position: static;
+  }
+}
+@media screen and (max-width: 1199.98px) {
+  .container {
+    padding: 0 50px;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .header .bars {
+    display: flex;
+  }
+  .header .nav {
+    display: none;
+  }
+  .header__inner {
+    justify-content: space-between;
+  }
+  .header .header-action {
+    margin-top: 0;
+  }
+}
 .hero {
   padding-top: 135px;
 }
@@ -231,6 +263,8 @@ textarea {
 }
 .statistics__inner {
   position: relative;
+  margin: 0 auto;
+  max-width: 100%;
 }
 .statistics__title {
   margin: 0 auto;
@@ -257,7 +291,7 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 2.17rem;
+  gap: 2.17rem;
 }
 .statistics__list::before, .statistics__list::after {
   display: inline-block;
@@ -292,6 +326,7 @@ textarea {
 .statistics-item:nth-child(2) {
   padding-top: 6.08rem;
   padding-bottom: 6.08rem;
+  width: 29%;
 }
 .statistics-item:nth-child(2) .statistics__icon-wrapper {
   background: var(--green-100, #f2ffec);
@@ -319,8 +354,21 @@ textarea {
   margin-top: 2.47rem;
 }
 
+@media screen and (max-width: 991.98px) {
+  .statistics__list {
+    flex-direction: column;
+  }
+  .statistics-item {
+    align-items: center;
+    width: 100%;
+  }
+  .statistics-item:nth-child(2) {
+    width: 100%;
+    padding: 3.33rem;
+  }
+}
 .product__inner {
-  width: 975px;
+  max-width: 975px;
   padding-top: 10rem;
   margin: 0 auto;
 }
@@ -422,6 +470,11 @@ textarea {
   background: var(--orange-600, #ff6916);
 }
 
+@media screen and (max-width: 991.98px) {
+  .product .product-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 .news {
   margin-top: 12.77rem;
 }
@@ -439,7 +492,7 @@ textarea {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.27; /* 127.604% */
-  width: 65.75rem;
+  max-width: 60%;
 }
 .news__list {
   margin-top: 2.88rem;
@@ -546,7 +599,7 @@ textarea {
 .quality__inner .quality-list {
   position: relative;
   margin-top: 5rem;
-  width: 108.75rem;
+  max-width: 108.75rem;
   display: grid;
   grid-template-columns: auto auto auto;
   justify-content: center;
@@ -575,16 +628,31 @@ textarea {
 }
 .quality__inner .quality-list .quality-item .quality-item__inner .quality-item__desc {
   margin-top: 0.63rem;
-  width: 23.1774rem;
+  max-width: 23.1774rem;
   color: var(--content, #19191b);
   font-size: 1.3333rem;
   font-weight: 400;
   line-height: 1.53; /* 153.125% */
 }
 .quality__inner .quality-list .quality-item:nth-child(2) .quality-item__desc {
-  width: 30rem;
+  max-width: 30rem;
 }
 
+@media screen and (max-width: 991.98px) {
+  .quality .quality-list {
+    grid-template-columns: 1fr;
+  }
+  .quality .quality-bg {
+    display: none;
+  }
+  .quality .quality-item__title {
+    text-align: center;
+  }
+  .quality .quality-item__desc {
+    text-align: center;
+    max-width: 100% !important;
+  }
+}
 .rule {
   margin-top: 13.33rem;
   padding: 13.33rem 0;
@@ -622,6 +690,11 @@ textarea {
   height: 9.75rem;
 }
 
+@media screen and (max-width: 991.98px) {
+  .rule-list {
+    grid-template-columns: 1fr 1fr !important;
+  }
+}
 .form {
   margin-top: 13.3rem;
 }
@@ -689,6 +762,20 @@ textarea {
   border: none;
 }
 
+@media screen and (max-width: 991.98px) {
+  .form__inner {
+    flex-direction: column;
+  }
+  .form__media {
+    margin: 0 auto;
+  }
+  .form__action {
+    margin-top: 5rem;
+  }
+  .form__submit {
+    width: 100%;
+  }
+}
 .footer {
   margin-top: 13.3rem;
   background: var(--Green-100, #f2ffec);
