--- a/scss/pages/home/_product.scss
+++ b/scss/pages/home/_product.scss
@@ -1,6 +1,6 @@
 // product
 .product__inner {
-  width: 975px;
+  max-width: 975px;
   padding-top: 10rem;
   margin: 0 auto;
 
@@ -114,6 +114,14 @@
           background: var(--orange-600, #ff6916);
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 991.98px) {
+  .product {
+    .product-list {
+      grid-template-columns: 1fr 1fr;
     }
   }
 }
