--- a/scss/pages/home/_rule.scss
+++ b/scss/pages/home/_rule.scss
@@ -41,3 +41,9 @@
     }
   }
 }
+
+@media screen and (max-width: 991.98px) {
+  .rule-list {
+    grid-template-columns: 1fr 1fr !important;
+  }
+}
