--- a/css/home.css
+++ b/css/home.css
@@ -174,28 +174,70 @@ textarea {
   height: 20px;
 }
 
-@media screen and (max-width: 1399.98px) {
-  .header {
-    position: static;
-  }
-}
 @media screen and (max-width: 1199.98px) {
   .container {
+    max-width: 1140px;
     padding: 0 50px;
   }
 }
 @media screen and (max-width: 991.98px) {
+  .container {
+    max-width: 960px;
+  }
+  .header {
+    position: relative;
+  }
   .header .bars {
     display: flex;
   }
   .header .nav {
     display: none;
+    position: absolute;
+    z-index: 999;
+    background: white;
+    left: 0;
+    right: 0;
+    top: 0;
+  }
+  .header .nav-list {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+    padding-bottom: 30px;
+  }
+  .header .nav-item {
+    width: 100%;
+    text-align: center;
+  }
+  .header .active::before {
+    display: none !important;
+  }
+  .header .nav-item:hover::before {
+    display: none !important;
+  }
+  .header .nav-link {
+    padding-bottom: 0 !important;
   }
   .header__inner {
     justify-content: space-between;
   }
   .header .header-action {
     margin-top: 0;
+  }
+  .header .bg {
+    position: fixed;
+    z-index: 22;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+    opacity: 0;
+  }
+  .header .menu:checked ~ .nav {
+    display: block;
+  }
+  .header .menu:checked ~ .bg {
+    visibility: visible;
+    opacity: 1;
   }
 }
 .hero {
@@ -244,6 +286,7 @@ textarea {
 }
 .hero__brand-name {
   display: inline-block;
+  z-index: 1;
   position: absolute;
   top: 5.5rem;
   right: 3.42rem;
@@ -258,6 +301,31 @@ textarea {
   writing-mode: vertical-rl;
 }
 
+@media screen and (max-width: 1199.98px) {
+  .hero__inner {
+    flex-direction: column-reverse;
+    row-gap: 100px;
+  }
+  .hero__media {
+    margin-left: 0;
+    width: 100vw;
+  }
+  .hero__content {
+    width: 100%;
+    text-align: center;
+  }
+  .hero__desc {
+    max-width: 100%;
+  }
+  .hero__img {
+    left: -50px;
+  }
+}
+@media screen and (max-width: 991.98px) {
+  .hero {
+    padding-top: 0;
+  }
+}
 .statistics {
   margin-top: 10rem;
 }
@@ -474,6 +542,16 @@ textarea {
   .product .product-list {
     grid-template-columns: 1fr 1fr;
   }
+  .product .product-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .product .product-list {
+    grid-template-columns: 1fr;
+  }
 }
 .news {
   margin-top: 12.77rem;
@@ -563,6 +641,15 @@ textarea {
   color: black;
 }
 
+@media screen and (max-width: 991.98px) {
+  .news .news__desc {
+    max-width: 100%;
+  }
+  .news .news__list {
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+  }
+}
 .quality {
   position: relative;
   margin-top: 10rem;
@@ -609,6 +696,7 @@ textarea {
 .quality__inner .quality-list .quality__img {
   width: 100%;
   height: 19.5rem;
+  object-fit: cover;
 }
 .quality__inner .quality-list .quality-item {
   border-radius: 0.8333rem;
@@ -686,13 +774,37 @@ textarea {
   color: var(--content, #2c2c2c);
   font-size: 1.5rem;
   font-weight: 500;
-  width: 21.6667rem;
+  max-width: 21.6667rem;
   height: 9.75rem;
 }
 
 @media screen and (max-width: 991.98px) {
   .rule-list {
     grid-template-columns: 1fr 1fr !important;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .rule {
+    margin-top: 3rem;
+    padding-top: 0;
+  }
+  .rule-list {
+    grid-template-columns: 1fr !important;
+  }
+  .rule-item {
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 575.98px) {
+  .rule-item {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 2rem;
+    text-align: center !important;
+  }
+  .rule-item__desc {
+    max-width: 100%;
   }
 }
 .form {
@@ -776,6 +888,21 @@ textarea {
     width: 100%;
   }
 }
+@media screen and (max-width: 767.98px) {
+  .form .form-row {
+    flex-wrap: wrap;
+    row-gap: 2.27rem;
+  }
+  .form .form__short {
+    width: 100%;
+  }
+  .form .form__media::before {
+    right: 50%;
+    translate: 50%;
+    max-width: 30rem;
+    max-height: 30rem;
+  }
+}
 .footer {
   margin-top: 13.3rem;
   background: var(--Green-100, #f2ffec);
@@ -849,6 +976,28 @@ textarea {
 }
 .footer .footer-bottom__list .footer-bottom__link:hover {
   background: var(--orange-600, #ff6916);
+}
+
+@media screen and (max-width: 991.98px) {
+  .footer .footer-row {
+    column-gap: 0;
+  }
+}
+@media screen and (max-width: 767.98px) {
+  .footer .footer-row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer .footer__list {
+    width: 100%;
+  }
+  .footer .footer__title {
+    text-align: center;
+  }
+  .footer .footer-bottom {
+    flex-direction: column;
+    row-gap: 3rem;
+  }
 }
 
 /*# sourceMappingURL=home.css.map */
