--- a/scss/pages/home/_header.scss
+++ b/scss/pages/home/_header.scss
@@ -101,25 +101,59 @@
 }
 
 @media screen and (max-width: 1399.98px) {
-  .header {
-    position: static;
-  }
 }
 
 @media screen and (max-width: 1199.98px) {
   .container {
+    max-width: 1140px;
     padding: 0 50px;
   }
 }
 
 @media screen and (max-width: 991.98px) {
+  .container {
+    max-width: 960px;
+  }
+
   .header {
+    position: relative;
+
     .bars {
       display: flex;
     }
 
     .nav {
       display: none;
+      position: absolute;
+      z-index: 999;
+      background: white;
+      left: 0;
+      right: 0;
+      top: 0;
+    }
+
+    .nav-list {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 20px;
+      padding-bottom: 30px;
+    }
+
+    .nav-item {
+      width: 100%;
+      text-align: center;
+    }
+
+    .active::before {
+      display: none !important;
+    }
+
+    .nav-item:hover::before {
+      display: none !important;
+    }
+
+    .nav-link {
+      padding-bottom: 0 !important;
     }
 
     &__inner {
@@ -128,6 +162,24 @@
 
     .header-action {
       margin-top: 0;
+    }
+
+    .bg {
+      position: fixed;
+      z-index: 22;
+      inset: 0;
+      background: rgb(0, 0, 0, 0.5);
+      visibility: hidden;
+      opacity: 0;
+    }
+
+    .menu:checked ~ .nav {
+      display: block;
+    }
+
+    .menu:checked ~ .bg {
+      visibility: visible;
+      opacity: 1;
     }
   }
 }
