--- a/scss/pages/home/_footer.scss
+++ b/scss/pages/home/_footer.scss
@@ -88,3 +88,33 @@
     }
   }
 }
+
+@media screen and (max-width: 991.98px) {
+  .footer {
+    .footer-row {
+      column-gap: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .footer {
+    .footer-row {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .footer__list {
+      width: 100%;
+    }
+
+    .footer__title {
+      text-align: center;
+    }
+
+    .footer-bottom {
+      flex-direction: column;
+      row-gap: 3rem;
+    }
+  }
+}
