--- a/scss/pages/home/_form.scss
+++ b/scss/pages/home/_form.scss
@@ -97,3 +97,22 @@
     }
   }
 }
+
+@media screen and (max-width: 767.98px) {
+  .form {
+    .form-row {
+      flex-wrap: wrap;
+      row-gap: 2.27rem;
+    }
+    .form__short {
+      width: 100%;
+    }
+
+    .form__media::before {
+      right: 50%;
+      translate: 50%;
+      max-width: 30rem;
+      max-height: 30rem;
+    }
+  }
+}
