--- a/scss/pages/home/_hero.scss
+++ b/scss/pages/home/_hero.scss
@@ -54,6 +54,7 @@
 
   &__brand-name {
     display: inline-block;
+    z-index: 1;
     position: absolute;
     top: 5.5rem;
     right: 3.42rem;
@@ -67,5 +68,38 @@
 
     word-wrap: break-word;
     writing-mode: vertical-rl;
+  }
+}
+
+@media screen and (max-width: 1199.98px) {
+  .hero {
+    &__inner {
+      flex-direction: column-reverse;
+      row-gap: 100px;
+    }
+
+    &__media {
+      margin-left: 0;
+      width: 100vw;
+    }
+
+    &__content {
+      width: 100%;
+      text-align: center;
+    }
+
+    &__desc {
+      max-width: 100%;
+    }
+
+    &__img {
+      left: -50px;
+    }
+  }
+}
+
+@media screen and (max-width: 991.98px) {
+  .hero {
+    padding-top: 0;
   }
 }
