--- a/scss/pages/home/_product.scss
+++ b/scss/pages/home/_product.scss
@@ -123,5 +123,19 @@
     .product-list {
       grid-template-columns: 1fr 1fr;
     }
+
+    .product-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .product {
+    .product-list {
+      grid-template-columns: 1fr;
+    }
   }
 }
