--- a/scss/pages/home/_rule.scss
+++ b/scss/pages/home/_rule.scss
@@ -35,7 +35,7 @@
         color: var(--content, #2c2c2c);
         font-size: 1.5rem;
         font-weight: 500;
-        width: 21.6667rem;
+        max-width: 21.6667rem;
         height: 9.75rem;
       }
     }
@@ -45,5 +45,34 @@
 @media screen and (max-width: 991.98px) {
   .rule-list {
     grid-template-columns: 1fr 1fr !important;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .rule {
+    margin-top: 3rem;
+    padding-top: 0;
+  }
+
+  .rule-list {
+    grid-template-columns: 1fr !important;
+  }
+
+  .rule-item {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .rule-item {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 2rem;
+    text-align: center !important;
+  }
+
+  .rule-item__desc {
+    max-width: 100%;
   }
 }
