--- a/scss/pages/home/_quality.scss
+++ b/scss/pages/home/_quality.scss
@@ -103,5 +103,9 @@
       text-align: center;
       max-width: 100% !important;
     }
+
+    .quality__img {
+      height: auto !important;
+    }
   }
 }
